--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-/target/
-.apt_generated
 .classpath
-.factorypath
 .project
-.settings
-.springBeans
-.sts4-cache
+.settings/
+target/
+/target/
+
+/target/
+*/target/**
+**/META-INF/
+!.mvn/wrapper/maven-wrapper.jar
